[package]
name = "x227f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
chrono = { version = "0.4.34", features = ["serde"] }
compact_str = { version = "0.7.1", features = ["serde"] }
eyre = "0.6.12"
futures-util = "0.3.30"
hex = "0.4.3"
image = { version = "0.24.7", git = "https://github.com/image-rs/image", features = [
    "webp-encoder",
    "avif",
    "avif-decoder",
] }
oxipng = "9.0.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.11.24", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
scraper = "0.19.0"
serde = "1.0.197"
serde_cbor = "0.11.2"
serde_json = "1.0.114"
serde_with = "3.6.1"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
