[package]
name = "x227f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }
eyre = "0.6.12"
futures-util = "0.3.31"
hex = "0.4.3"
image = { git = "https://github.com/image-rs/image", features = [
    "webp",
    "avif",
] }
indexmap = { version = "2.10.0", features = ["serde"] }
oxipng = { version = "9.1.5", features = ["zopfli"] }
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
scraper = "0.23.1"
serde = "1.0.219"
serde_cbor = "0.11.2"
serde_json = "1.0.141"
serde_with = "3.14.0"
sha2 = "0.10.9"
soa-rs = "0.8.1"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }

[profile.release]
debug = true
